testing auto deployment

--- a/hrm-app/templates/index.html
+++ b/hrm-app/templates/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Welcome to Fonteyn HRM</h1>
         <p class="centered-text">Manage your HR needs with ease—access employee details, departments, positions, payroll, and attendance all in one place.</p>
-        <p><a href="/employees">Employees</a></p>
+        <p><a href="/employees">Employees TESTING TO SEE IF THE AUTOMATION WORKS</a></p>
         <p><a href="/departments">Departments</a></p>
         <p><a href="/positions">Positions</a></p>
         <p><a href="/payroll">Payroll</a></p>
