--- a/hrm-app/templates/index.html
+++ b/hrm-app/templates/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <h1>Welcome to Fonteyn HRM</h1>
         <p class="centered-text">Manage your HR needs with ease—access employee details, departments, positions, payroll, and attendance all in one place.</p>
-        <p><a href="/employees">Employees Testing Automating Deployment</a></p>
-        <p><a href="/departments">Departments blah blah blah</a></p>
+        <p><a href="/employees">Employees</a></p>
+        <p><a href="/departments">Departments</a></p>
         <p><a href="/positions">Positions</a></p>
         <p><a href="/payroll">Payroll</a></p>
         <p><a href="/attendance">Attendance</a></p>
